[tool.poetry]
name = "django-mrrt"
version = "0.0.1"
description = "Django app for structured radiology report template storage. Based upon IHE Management of Radiology Report Templates (MRRT)."
authors = ["John Paulett <john@paulett.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
swapper = "^1.3.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.8.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "mazel"
float_to_top = true
